--- a/1010LLM.md
+++ b/1010LLM.md
@@ -1,4 +1,4 @@
-# 該踩或不該踩的坑都踩完，大型語言模型直接就打完收工？
+# [該踩或不該踩的坑都踩完，大型語言模型直接就打完收工？](https://deep-learning-101.github.io/)
 
 **作者**：TonTon Huang Ph.D.  
 **日期**：2024年10月10日  
