--- a/0204LLM.md
+++ b/0204LLM.md
@@ -1,4 +1,4 @@
-# 大型語言模型 (LLM) 入門完整指南：原理、應用與未來 (2025 版)
+# [大型語言模型 (LLM) 入門完整指南：原理、應用與未來 (2025 版)](https://deep-learning-101.github.io/)
 
 **作者**：[TonTon Huang Ph.D.](https://www.twman.org/)   
 **日期**：2024年2月4日  
