--- a/notebooklm/CH18.md
+++ b/notebooklm/CH18.md
@@ -29,10 +29,8 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
 </p>
 
-# 表示學習重點摘要 - [YouTube](https://www.youtube.com/watch?v=yw1JDopTuwo)
+# 直面配分函數 - [YouTube](https://www.youtube.com/watch?v=yw1JDopTuwo)
 ### Confronting the Partition Function @ Deep Learning Book Chapter 18 (2018/01/12)
-
-# 直面配分函數 (Confronting the Partition Function)
 
 ## 核心挑戰：配分函數 Z(θ)
 
