--- a/notebooklm/CH10.md
+++ b/notebooklm/CH10.md
@@ -21,7 +21,6 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
   <a href="https://www.youtube.com/@DeepLearning101">YouTube</a> |
   <a href="https://www.facebook.com/groups/525579498272187/">台灣人工智慧社團 FB</a> |
   <a href="https://www.twman.org/">TonTon Huang Ph.D.</a> |  
-  <a href="https://deep-learning-101.github.io/">回 GitHub Pages</a> |
   <a href="http://DeepLearning101.TWMAN.ORG">台灣人工智慧社團 網站</a> |
   <a href="https://huggingface.co/DeepLearning101">Hugging Face</a>
 </p>
@@ -29,8 +28,9 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
 </p>
 
-# 深度學習正則化技術匯整 - [YouTube](https://www.youtube.com/watch?v=p6xzPqRd46w)
-### Recurrent and Recursive Nets @ Deep Learning Book Chapter 10 (2017/05/05)
+# 第十章 序列建模：循環和遞歸網路 - [YouTube](https://www.youtube.com/watch?v=p6xzPqRd46w) - <a href="https://deep-learning-101.github.io/">回上一頁 GitHub Pages</a>
+
+### Recurrent and Recursive Nets (2017/05/05)
 
 # 循環神經網路 (Recurrent Neural Network, RNN) 及其相關架構與挑戰
 
