--- a/notebooklm/CH18.md
+++ b/notebooklm/CH18.md
@@ -21,7 +21,6 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
   <a href="https://www.youtube.com/@DeepLearning101">YouTube</a> |
   <a href="https://www.facebook.com/groups/525579498272187/">台灣人工智慧社團 FB</a> |
   <a href="https://www.twman.org/">TonTon Huang Ph.D.</a> |  
-  <a href="https://deep-learning-101.github.io/">回 GitHub Pages</a> |
   <a href="http://DeepLearning101.TWMAN.ORG">台灣人工智慧社團 網站</a> |
   <a href="https://huggingface.co/DeepLearning101">Hugging Face</a>
 </p>
@@ -29,8 +28,11 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
 </p>
 
-# 直面配分函數 - [YouTube](https://www.youtube.com/watch?v=yw1JDopTuwo)
-### Confronting the Partition Function @ Deep Learning Book Chapter 18 (2018/01/12)
+# 第十八章 直面配分函數  - [YouTube](https://www.youtube.com/watch?v=yw1JDopTuwo) - <a href="https://deep-learning-101.github.io/">回上一頁 GitHub Pages</a>
+
+### Confronting the Partition Function (2018/01/12)
+
+# 直面配分函數 (Confronting the Partition Function)
 
 ## 核心挑戰：配分函數 Z(θ)
 
