--- a/notebooklm/CH20.md
+++ b/notebooklm/CH20.md
@@ -21,7 +21,6 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
   <a href="https://www.youtube.com/@DeepLearning101">YouTube</a> |
   <a href="https://www.facebook.com/groups/525579498272187/">台灣人工智慧社團 FB</a> |
   <a href="https://www.twman.org/">TonTon Huang Ph.D.</a> |  
-  <a href="https://deep-learning-101.github.io/">回 GitHub Pages</a> |
   <a href="http://DeepLearning101.TWMAN.ORG">台灣人工智慧社團 網站</a> |
   <a href="https://huggingface.co/DeepLearning101">Hugging Face</a>
 </p>
@@ -29,8 +28,9 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
 </p>
 
-# 深度生成模型 - [YouTube](https://www.youtube.com/watch?v=oiDYD1qibBQ)
-### Deep Generative Models @ Deep Learning Book Chapter 20 (2018/04/13)
+# 第二十章 深度生成模型   - [YouTube](https://www.youtube.com/watch?v=oiDYD1qibBQ) - <a href="https://deep-learning-101.github.io/">回上一頁 GitHub Pages</a>
+
+### Deep Generative Models (2018/04/13)
 
 ### 總體目標與模型類型
 
