--- a/notebooklm/NO44.md
+++ b/notebooklm/NO44.md
@@ -25,7 +25,9 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
   <a href="https://huggingface.co/DeepLearning101">Hugging Face</a>
 </p>
 <p align="center">
-<a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
+<a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" >
+<audio controls style="width:200px; height:20px;"><source src="notebooklm-mp3/NO44.mp3" type="audio/mpeg"></audio>
+</a>
 </p>
 
 # 神經網路的黑執事 - [YouTube](https://www.youtube.com/watch?v=gMaQTqZUW58) - <a href="https://deep-learning-101.github.io/">回上一頁 GitHub Pages</a>
