--- a/notebooklm/NO44.md
+++ b/notebooklm/NO44.md
@@ -14,8 +14,9 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 </p>  
 <p align="center">
   <a href="https://huggingface.co/spaces/DeepLearning101/Deep-Learning-101-FAQ" target="_blank">
-    <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="400">
   </a>
+<audio controls style="width:200px; height:20px;"><source src="notebooklm-mp3/NO44.mp3" type="audio/mpeg"></audio>
+</a>  
 </p>
 <p align="center">
   <a href="https://www.youtube.com/@DeepLearning101">YouTube</a> |
