--- a/notebooklm/CH10.md
+++ b/notebooklm/CH10.md
@@ -28,7 +28,7 @@ title: Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup
 
 <a href="https://www.youtube.com/watch?v=p6xzPqRd46w" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i>2017/05/05, Recurrent and Recursive Nets @ Deep Learning Book Chapter 10</a><br>
 
-# 循環神經網路 (Recurrent Neural Network, RNN) 及其相關架構與挑戰
+# 循環神經網路及其相關架構與挑戰
 
 本摘要根據您提供的資料來源，匯整了關於循環神經網路 (RNN) 及其相關概念的重點。
 
