--- a/notebooklm/CH17.md
+++ b/notebooklm/CH17.md
@@ -1,40 +1,36 @@
 ---
 layout: default
-title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101
+title: Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101
 ---
 
 <p align="center">
-  <strong>The top private AI Meetup in Taiwan, launched on 2016/11/11 @ 83F, Taipei 101</strong>
+  <strong>Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101</strong>  
 </p>
 <p align="center">
-  <strong>Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101</strong><br><br>
-  AI是條寂寞且惶恐的道路，花俏的收費課程或活動絕不會是條捷徑<br>
-  本頁內容為過往實名分享制的讀書會，感謝來自不同公司參與者的支持；如欲移除資訊還請告知。<br>
-  Deep Learning 101 只由 TonTon Huang Ph.D. 及其當時任職公司無償贊助場地及茶水點心，無 Co-organizer<br>
+  AI是一條孤獨且充滿惶恐及未知的旅程，花俏絢麗的收費課程或活動絕非通往成功的捷徑。<br>
+  衷心感謝當時來自不同單位的AI同好參與者實名分享的寶貴經驗；如欲移除資訊還請告知。<br>
+  由 <a href="https://www.twman.org/" target="_blank">TonTon Huang Ph.D.</a> 發起，及其當時任職公司(台灣雪豹科技)無償贊助場地及茶水點心。<br>
 </p>  
 <p align="center">
   <a href="https://huggingface.co/spaces/DeepLearning101/Deep-Learning-101-FAQ" target="_blank">
-    <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="400">
-  </a>
+    <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="180"></a>
+    <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 100px !important;width: 180px !important;" ></a>
 </p>
 <p align="center">
-  <a href="https://www.youtube.com/@DeepLearning101">YouTube</a> |
-  <a href="https://www.facebook.com/groups/525579498272187/">台灣人工智慧社團 FB</a> |
-  <a href="https://www.twman.org/">TonTon Huang Ph.D.</a> |  
-  <a href="http://DeepLearning101.TWMAN.ORG">台灣人工智慧社團 網站</a> |
-  <a href="https://huggingface.co/DeepLearning101">Hugging Face</a>
-</p>
-<p align="center">
-<a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
+  <a href="https://www.youtube.com/@DeepLearning101" target="_blank">YouTube</a> |
+  <a href="https://www.facebook.com/groups/525579498272187/" target="_blank">Facebook</a> |
+  <a href="https://deep-learning-101.github.io/"> 回 GitHub Pages</a> |
+  <a href="http://DeepLearning101.TWMAN.ORG" target="_blank">網站</a> |
+  <a href="https://huggingface.co/DeepLearning101" target="_blank">Hugging Face Space</a>
 </p>
 
-# 第十七章 蒙特卡羅方法  - [YouTube](https://www.youtube.com/watch?v=qef-XTUpDvE) - <a href="https://deep-learning-101.github.io/">回上一頁 GitHub Pages</a>
+# 第十七章 蒙特卡羅方法
 
-### Monte Carlo Methods (2017/12/15)
+<a href="https://www.youtube.com/watch?v=qef-XTUpDvE" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i>2017/12/15, Monte Carlo Methods @ Deep Learning Book Chapter 17</a><br>
 
-### 機器學習中的採樣與蒙地卡羅方法重點彙整
+# 機器學習中的採樣與蒙地卡羅方法
 
-#### 1. 採樣的必要性與蒙地卡羅方法基礎
+## 1. 採樣的必要性與蒙地卡羅方法基礎
 
 *   在機器學習中，**經常需要從機率分佈中採樣** [1]。
 *   主要原因是為了**近似難以精確計算的數學表達式**，例如複雜的和或積分 [2, 3]，這在處理大型數據或難解模型時非常有用 [2]。
@@ -47,7 +43,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 *   **中心極限定理**指出，大量獨立同分佈隨機變數的平均值的分佈會趨於正態分佈 [6, 7]，這在大樣本下允許我們估計蒙地卡羅估計量的置信區間 [6-8]。
 *   蒙地卡羅方法的局限性之一是，當目標和或積分難以直接從分佈中採樣時，基本蒙地卡羅方法不再直接適用 [7].
 
-#### 2. 重要性採樣 (Importance Sampling)
+## 2. 重要性採樣 (Importance Sampling)
 
 *   重要性採樣的主要目的是**在無法直接或有效從目標分佈 $p(x)$ 中採樣時**，通過從一個易於採樣的提議分佈 $q(x)$ 中抽取樣本來估計在 $p(x)$ 下的期望值 $E_p[f(x)]$ [1, 2, 6, 7].
 *   核心思想是從提議分佈 $q$ 中抽取樣本，並使用重要性權重 $w(x) = p(x)/q(x)$ 對樣本進行加權，以校正由於採樣分佈不同引入的偏差 [6, 7].
@@ -61,7 +57,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
     *   理論上最優的提議分佈 $q^*(x)$ 與 $p(x)|f(x)|$ 成正比 [7, 8]，但在實踐中通常難以實現 [7, 8].
 *   儘管存在一些潛在問題，重要性採樣在機器學習應用中扮演著重要角色，包括深度學習算法 [10].
 
-#### 3. 馬爾可夫鏈蒙地卡羅 (MCMC) 方法
+## 3. 馬爾可夫鏈蒙地卡羅 (MCMC) 方法
 
 *   MCMC 方法主要解決在**目標分佈難以直接進行獨立同分佈採樣的問題** [6, 7, 11, 12]，特別是對於**高維分佈**或其歸一化常數（如配分函數）難以計算的情況 [7, 11, 12]. 這類問題常見於複雜的、高維機率分佈，例如深度學習模型中的後驗分佈或能量模型 [10, 12].
 *   MCMC 的核心思想是**構造一個馬爾可夫鏈** [6, 7, 11, 12]，使其在經過足夠長時間的演變後，能夠收斂到以**目標分佈 $p$ 作為其平穩分佈 (stationary distribution)** [6, 7, 11, 12].
@@ -70,7 +66,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 *   一旦馬爾可夫鏈達到平穩狀態（經過「燒入期」burn-in period 後） [6, 11, 12]，從鏈中抽取出的樣本序列在理論上就近似於從目標分佈 $p$ 中抽取的樣本 [11-13]，可以用於近似目標分佈下的期望值或其他統計量 [11].
 *   MCMC 的一個關鍵挑戰是**混合時間 (mixing time)** [12, 13]，即鏈達到平穩分佈所需的時間，這可能非常長 [12]. 並且**無法預先知道確切需要運行多少步才能達到平衡分佈** [13, 14]。實際中常通過人工檢查或比較前後樣本的相關度來判斷是否收斂 [14].
 
-#### 4. MCMC 的常見挑戰與改善方法
+## 4. MCMC 的常見挑戰與改善方法
 
 *   MCMC 存在一些挑戰 [7, 11]:
     *   **收斂性 (Convergence):** 需要運行足夠長的「燒入期」以確保馬爾可夫鏈達到其平穩分佈 [6, 11]. 確定何時達到收斂是一個難題 [11, 13].
@@ -82,7 +78,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
         *   **單鏈回火 (Simulated Annealing)** 是在時間上逐漸改變單條鏈的溫度 [6, 7, 16, 17].
         *   **並行回火 (Parallel Tempering):** 運行多條在不同溫度下的馬爾可夫鏈 [6, 7, 16-18]，並允許這些鏈之間**交換狀態** [16-18]. 高溫鏈更容易探索狀態空間和跳躍到不同峰值區域 [17, 18]，通過與低溫鏈交換狀態，將這種探索結果傳遞給低溫鏈 [17, 18]，幫助低溫鏈克服能量勢壘，改善整體混合性 [17, 18]. 並行處理多條鏈也可以幫助獲取更多無關樣本 [13].
 
-#### 5. Gibbs 採樣
+## 5. Gibbs 採樣
 
 *   Gibbs 採樣是一種**特殊的 MCMC 算法** [6, 7, 17].
 *   它適用於**當目標分佈的全條件分佈 (full conditional distributions) 易於採樣的情況** [6, 7, 17]. 全條件分佈是一個變數在給定其他所有變數當前值下的條件機率分佈 [6].
@@ -90,7 +86,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 *   Gibbs 採樣的優點包括**實現相對簡單**（如果全條件分佈已知且易於採樣） [2, 6, 17]，**無需調整提議分佈** [2, 17]，且接受率（在 Metropolis-Hastings 框架下）總是 1 [2, 17].
 *   它特別適用於各變數全條件分佈易於採樣的場景，常見於圖模型和能量模型中 [17]. 在處理潛變數模型（如 RBM）時，如果後驗分佈尖銳或多峰，Gibbs 採樣可能混合緩慢 [16].
 
-#### 6. 深度學習圖像處理項目案例
+## 6. 深度學習圖像處理項目案例
 
 *   一個基於深度學習技術的**平面角色處理和識別項目正在進行中** [7].
 *   項目成員來自台灣科技大學和清華大學 [7].
