--- a/notebooklm/CH15.md
+++ b/notebooklm/CH15.md
@@ -1,38 +1,34 @@
 ---
 layout: default
-title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101
+title: Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101
 ---
 
 <p align="center">
-  <strong>The top private AI Meetup in Taiwan, launched on 2016/11/11 @ 83F, Taipei 101</strong>
+  <strong>Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101</strong>  
 </p>
 <p align="center">
-  <strong>Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101</strong><br><br>
-  AI是條寂寞且惶恐的道路，花俏的收費課程或活動絕不會是條捷徑<br>
-  本頁內容為過往實名分享制的讀書會，感謝來自不同公司參與者的支持；如欲移除資訊還請告知。<br>
-  Deep Learning 101 只由 TonTon Huang Ph.D. 及其當時任職公司無償贊助場地及茶水點心，無 Co-organizer<br>
+  AI是一條孤獨且充滿惶恐及未知的旅程，花俏絢麗的收費課程或活動絕非通往成功的捷徑。<br>
+  衷心感謝當時來自不同單位的AI同好參與者實名分享的寶貴經驗；如欲移除資訊還請告知。<br>
+  由 <a href="https://www.twman.org/" target="_blank">TonTon Huang Ph.D.</a> 發起，及其當時任職公司(台灣雪豹科技)無償贊助場地及茶水點心。<br>
 </p>  
 <p align="center">
   <a href="https://huggingface.co/spaces/DeepLearning101/Deep-Learning-101-FAQ" target="_blank">
-    <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="400">
-  </a>
+    <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="180"></a>
+    <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 100px !important;width: 180px !important;" ></a>
 </p>
 <p align="center">
-  <a href="https://www.youtube.com/@DeepLearning101">YouTube</a> |
-  <a href="https://www.facebook.com/groups/525579498272187/">台灣人工智慧社團 FB</a> |
-  <a href="https://www.twman.org/">TonTon Huang Ph.D.</a> |  
-  <a href="http://DeepLearning101.TWMAN.ORG">台灣人工智慧社團 網站</a> |
-  <a href="https://huggingface.co/DeepLearning101">Hugging Face</a>
-</p>
-<p align="center">
-<a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
+  <a href="https://www.youtube.com/@DeepLearning101" target="_blank">YouTube</a> |
+  <a href="https://www.facebook.com/groups/525579498272187/" target="_blank">Facebook</a> |
+  <a href="https://deep-learning-101.github.io/"> 回 GitHub Pages</a> |
+  <a href="http://DeepLearning101.TWMAN.ORG" target="_blank">網站</a> |
+  <a href="https://huggingface.co/DeepLearning101" target="_blank">Hugging Face Space</a>
 </p>
 
-# 第十五章 表示學習  - [YouTube](https://www.youtube.com/watch?v=MA52s5dQaGY) - <a href="https://deep-learning-101.github.io/">回上一頁 GitHub Pages</a>
+# 第十五章 表示學習
 
-### Representation Learning (2017/07/07)
+<a href="https://www.youtube.com/watch?v=MA52s5dQaGY" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i>2017/07/07, Representation Learning @ Deep Learning Book Chapter 15</a><br>
 
-### 表示學習的核心思想與理想屬性
+# 表示學習的核心思想與理想屬性
 
 *   **表示學習**的核心思想是學習數據的良好表示或特徵，以便更容易解決後續的學習任務，例如分類或回歸 [3]。
 *   一個好的表示能夠捕捉數據中的**本質結構和有用信息** [3]。不同的表示方式會組織和呈現信息，好的表示能使相關模式更突出，無關信息被抑制，從而簡化後續處理 [3]。例如，阿拉伯數字比羅馬數字更容易進行算術運算；圖像的像素值難以用於物體識別，但將其轉換為邊緣、角點等特徵後則更容易 [3]。
@@ -47,7 +43,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 *   **稀疏性 (Sparsity)** 假設表示中只有少數特徵活躍 [11]。這有助於提取本質信息、提高可解釋性、計算效率並作為正則化手段避免過擬合 [11]。
 *   **流形學習 (Manifold Learning)** 假設高維數據位於低維非線性流形上 [9]。表示學習的目標之一是找到並學習數據在流形上的表示，以捕捉內在結構 [9]。音訊中以圖片平移為例，說明在流形上本質表示可能相同 [9]。
 
-### Autoencoder 及其變體
+# Autoencoder 及其變體
 
 *   **Autoencoder** 是一種神經網路，訓練目標是使輸出與輸入相似 [12]。它包含將輸入映射到隱藏層（Code Layer）的編碼器（Encoder）和將隱藏層映射回輸出的解碼器（Decoder） [12]。
 *   **欠完備自編碼器 (Undercomplete Autoencoder)** 的隱藏層維度比輸入維度小，強迫模型捕捉輸入數據的最顯著特徵，學習有意義的表示 [1, 12]。常用的損失函數是均方誤差 (Mean Squared Error) [12]。
@@ -58,7 +54,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 *   **深度 Autoencoder** 相較於淺層具有更高的表示效率，可能需要更少的數據和訓練時間 [14].
 *   **參數化稀疏編碼 (Parametric Sparse Coding, PSC)** 可以看作是一種 Autoencoder 的變體，包含參數化的編碼器和解碼器，用於預測輸出並推斷稀疏的潛在表示（H） [16]。它在物體偵測等非監督學習任務中有應用 [16]。
 
-### 深度學習中的預訓練與遷移學習
+# 深度學習中的預訓練與遷移學習
 
 *   **貪心逐層無監督預訓練 (Greedy Layer-wise Unsupervised Pre-training)** 是一種早期訓練深度網路的方法 [17]。它逐層獨立地無監督訓練網路，將前一層輸出作為下一層輸入，並固定已訓練層的參數 [17, 18]。這個預訓練過程為後續的監督學習（精調）提供更好的參數初始值 [17]。
 *   這種預訓練在早期深度學習中很重要，因為它有助於緩解梯度消失/爆炸等優化困難，找到較好的參數區域 [17-19]。
@@ -79,7 +75,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 *   精調時，可以對不同的層使用不同的學習率，例如前面層用較小的學習率以保留預訓練學到的通用特徵 [20]。
 *   **層次遷移 (Layer Transfer)** 是指複製預訓練模型中的部分層到新模型的初始化中 [22]. 在圖像任務中，通常認為前面幾層學習通用特徵（如邊緣、形狀），而後面層學習更具體的高級特徵 [22]。因此，在圖像領域常複製前面幾層 [22]，但在語音領域可能恰好相反 [22]。實際應用中，常使用的可能是接近輸出層（softmax前）的表示 [22].
 
-### 實際應用與挑戰
+# 實際應用與挑戰
 
 *   **Autoencoder** 在圖像和視訊的非監督學習、物體偵測等方面有應用 [16, 23].
 *   **深度神經網路 (DNN)** 在廣告推薦系統中有實際應用 [23-25]。例如，在行動應用程式 (APP) 通知推薦中，利用多種用戶和設備特徵（如 CPU 核數、電量、網路狀態、情境等）來預測用戶點擊通知的可能性 [23, 24]。這能顯著提升點擊率及相關收益，同時減少對不感興趣用戶的打擾 [23, 25]。
