--- a/notebooklm/CH20.md
+++ b/notebooklm/CH20.md
@@ -1,45 +1,41 @@
 ---
 layout: default
-title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101
+title: Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101
 ---
 
 <p align="center">
-  <strong>The top private AI Meetup in Taiwan, launched on 2016/11/11 @ 83F, Taipei 101</strong>
+  <strong>Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101</strong>  
 </p>
 <p align="center">
-  <strong>Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101</strong><br><br>
-  AI是條寂寞且惶恐的道路，花俏的收費課程或活動絕不會是條捷徑<br>
-  本頁內容為過往實名分享制的讀書會，感謝來自不同公司參與者的支持；如欲移除資訊還請告知。<br>
-  Deep Learning 101 只由 TonTon Huang Ph.D. 及其當時任職公司無償贊助場地及茶水點心，無 Co-organizer<br>
+  AI是一條孤獨且充滿惶恐及未知的旅程，花俏絢麗的收費課程或活動絕非通往成功的捷徑。<br>
+  衷心感謝當時來自不同單位的AI同好參與者實名分享的寶貴經驗；如欲移除資訊還請告知。<br>
+  由 <a href="https://www.twman.org/" target="_blank">TonTon Huang Ph.D.</a> 發起，及其當時任職公司(台灣雪豹科技)無償贊助場地及茶水點心。<br>
 </p>  
 <p align="center">
   <a href="https://huggingface.co/spaces/DeepLearning101/Deep-Learning-101-FAQ" target="_blank">
-    <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="400">
-  </a>
+    <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="180"></a>
+    <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 100px !important;width: 180px !important;" ></a>
 </p>
 <p align="center">
-  <a href="https://www.youtube.com/@DeepLearning101">YouTube</a> |
-  <a href="https://www.facebook.com/groups/525579498272187/">台灣人工智慧社團 FB</a> |
-  <a href="https://www.twman.org/">TonTon Huang Ph.D.</a> |  
-  <a href="http://DeepLearning101.TWMAN.ORG">台灣人工智慧社團 網站</a> |
-  <a href="https://huggingface.co/DeepLearning101">Hugging Face</a>
-</p>
-<p align="center">
-<a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
+  <a href="https://www.youtube.com/@DeepLearning101" target="_blank">YouTube</a> |
+  <a href="https://www.facebook.com/groups/525579498272187/" target="_blank">Facebook</a> |
+  <a href="https://deep-learning-101.github.io/"> 回 GitHub Pages</a> |
+  <a href="http://DeepLearning101.TWMAN.ORG" target="_blank">網站</a> |
+  <a href="https://huggingface.co/DeepLearning101" target="_blank">Hugging Face Space</a>
 </p>
 
-# 第二十章 深度生成模型   - [YouTube](https://www.youtube.com/watch?v=oiDYD1qibBQ) - <a href="https://deep-learning-101.github.io/">回上一頁 GitHub Pages</a>
+# 第二十章 深度生成模型
 
-### Deep Generative Models (2018/04/13)
+<a href="https://www.youtube.com/watch?v=oiDYD1qibBQ" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i>2018/04/13, Deep Generative Models @ Deep Learning Book Chapter 20</a><br>
 
-### 總體目標與模型類型
+## 總體目標與模型類型
 
 *   深度生成模型的核心目標是**表示多個變數的機率分佈** [1]。
 *   這些模型可大致分為兩類：
     *   **基於能量的模型 (Energy-based Models, EBM)**，如玻爾茲曼機、RBM、DBM [2, 3]。這些模型使用能量函數定義聯合機率分佈 [4-6]。
     *   **可微分生成網路 (Differentiable Generator Networks)**，如 VAE 和 GMMN [2, 3, 7]。這類模型通常將潛在變數通過一個可微分函數（通常是神經網路）映射到資料空間 [7, 8]。
 
-### 受限玻爾茲曼機 (Restricted Boltzmann Machine, RBM)
+## 受限玻爾茲曼機 (Restricted Boltzmann Machine, RBM)
 
 *   RBM 是一種具有單個隱藏層的玻爾茲曼機，其特點是**可見單元 (v) 和隱藏單元 (h) 之間有連接，但層內沒有連接** (二分圖結構) [4, 9]。
 *   其機率分佈由能量函數定義，機率與能量的負指數成正比 [5, 6]。
@@ -53,7 +49,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
     *   Positive Phase 通常較易計算，受益於 P(h|v) 的閉解形式 [3, 10, 11]。
     *   Negative Phase 涉及對所有可能狀態的求和，難以直接計算，需要通過採樣方法來近似 [3, 6, 11, 15]。
 
-### 深度信念網路 (Deep Belief Network, DBN)
+## 深度信念網路 (Deep Belief Network, DBN)
 
 *   DBN 是最早成功應用的深度非卷積生成模型之一 [16]。
 *   **結構特點：** 是一個**混合圖模型** [17]。**頂部兩層之間的連接是無向的 (構成一個 RBM)** [16-19]。**所有其他層之間的連接是有向的**，箭頭指向最接近數據的可見層 [16, 17]。層內沒有連接 [17]。
@@ -66,7 +62,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
     *   重複此過程以添加更多層 [8, 17]。每個 RBM 定義了 DBN 的一層 [17].
 *   **其他用途：** 訓練好的 DBN 的權重和偏置常被用於**初始化多層感知機 (MLP)** 的參數，隨後進行**判別性微調**用於分類任務 [8, 16, 17, 20]。
 
-### 深度玻爾茲曼機 (Deep Boltzmann Machine, DBM)
+## 深度玻爾茲曼機 (Deep Boltzmann Machine, DBM)
 
 *   DBM 是一種**完全無向的深度生成模型** [4, 8]。
 *   **結構特點：** 擁有多個潛變數層。與 RBM 類似，每層內的單元與相鄰層單元條件獨立 (層內無連接) [4].
@@ -87,7 +83,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
     *   **中心化 DBM (Centered DBM)：** 通過重參數化改善 Hessian 條件數，可能無需預訓練即可訓練 [25]。
     *   **多預測 DBM (MP-DBM)：** 訓練準則允許使用反向傳播，避免 MCMC 估計梯度 [25, 26]。它將平均場方程視為循環網路，訓練預測缺失值 [25, 26]。優點是使用精確梯度、分類/缺失值填充效果好 [26]。缺點是訓練目標非概似下界，可能導致生成樣本質量或概似值較差 [26]。
 
-### 可微分生成網路：變分自動編碼器 (VAE) 與 生成矩匹配網路 (GMMN)
+## 可微分生成網路：變分自動編碼器 (VAE) 與 生成矩匹配網路 (GMMN)
 
 *   這類模型不直接建模能量或可視變數上的複雜機率分佈，而是訓練一個可微分的生成器網路 [7]。
 
@@ -106,7 +102,7 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
     *   **與 GAN 和 VAE 不同：** GMMN **不需要判別器網路** (不像 GAN) [3, 30]，也**不需要編碼器/推斷網路** (不像 VAE) [3, 30]。它直接比較生成樣本和真實樣本在特徵空間中的矩 [30]。
     *   **批量大小的重要性：** 對於 MMD 的準確估計至關重要 [8, 30]。批量太小會低估真實變化，批量太大會減慢訓練速度 [8, 30]。
 
-### 自回歸網路 (Autoregressive Networks)
+## 自回歸網路 (Autoregressive Networks)
 
 *   這是有向機率模型，**沒有潛在隨機變數** [31]。
 *   **基本原理：** 使用機率的鏈式法則分解觀察變數上的聯合機率 P(x) = Π P(x_i | x_{<i}) [8, 31]。
@@ -116,19 +112,19 @@ title: Deep Learning 101, 台灣曾經最高最早發起的深度學習社群 @ 
 *   **NADE (Neural Autoregressive Density Estimator):** 一種具體的參數共享方案 [33]。輸入 x_k 對後續預測 x_j (j>k) 中隱藏單元的貢獻是獨立於 j 的 [33]。其前向計算與 RBM 中用於填充缺失輸入的均勻場推斷的第一步相似 [33]。
 *   **實值數據擴展 (RNADE):** 可使用高斯混合模型作為輸出層來處理實值數據 [33]。
 
-### 其他玻爾茲曼機變體
+## 其他玻爾茲曼機變體
 
 *   **實值數據上的玻爾茲曼機：** 將 RBM 擴展到處理實值可見單元，如 **Gaussian-Bernoulli RBM (GB-RBM)** [34]。處理條件協方差的模型如 **Mean and Covariance RBM (mcRBM)** 和 **Spike and Slab RBM (ssRBM)** [35]。
 *   **卷積玻爾茲曼機：** 將卷積結構引入玻爾茲曼機，用於處理高維、具平移不變性數據 [36]。引入**機率最大池化 (probabilistic max pooling)** 解決能量模型中池化狀態數指數增長的問題 [36, 37]。
 *   **用於結構化或序列輸出的玻爾茲曼機：** 建模條件機率 p(y|x) 或序列機率 p(x^(t)|x^(<t)) [38]。例如 **條件 RBM (CRBM)** [12, 38] 和 **RNN-RBM** [12, 38]。
 *   **其他變體：** 判別式 RBM (最大化條件概似 p(y|v)) [12, 39]，高階玻爾茲曼機 (能量函數含多個變數乘積項) [39]，選通 (Gating) 機制 (使用類別變數改變單元關係) [39]。開發新形式的挑戰在於保持條件分佈的可解性 [39]。
 
-### 模型評估注意事項
+## 模型評估注意事項
 
 *   **對數概似 (Log Likelihood) 比較：** 在 MNIST 等數據集上需小心，因為數據處理方式 (實值 vs. 二值，不同的二值化方法) 會極大影響結果，不同處理方式下的值不可直接比較 [40]。
 *   **視覺樣本檢查：** 具有局限性 [40]。判斷主觀；難以發現**模式崩潰 (Mode Collapse)** (模型只生成部分模式) 和**過擬合** (模型複製訓練樣本) [40]。無法檢測低機率但重要的錯誤 [40]。
 
-### 總結
+## 總結
 
 *   本章介紹的多種深度生成模型架構 (包括玻爾茲曼機、DBN、DBM、VAE、GAN、自回歸模型等) **沒有一種是普適的最佳選擇** [3, 41]。
 *   模型的選擇取決於具體的應用需求、數據特性和計算資源 [3, 41]。
