--- a/notebooklm/NO21.md
+++ b/notebooklm/NO21.md
@@ -25,70 +25,71 @@ title: Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup
 </p>
 
 
-# VAE: A generative model for 2D anime character faces [YouTube](https://www.youtube.com/watch?v=DF9GMPU8wPU)
+# Dynamic Routing Between Capsules [YouTube](https://www.youtube.com/watch?v=MPzqoY0e_YM)
 
-### 2018/06/08	Nat, Boris, Alice, Ian (蠻牛小隊)
+### 2018/07/06	Jiero Ho
 
 ---
 
-## 區塊鏈智能合約的主要安全風險
+## 區塊鏈智能合約安全現況與風險
 
-來源中明確指出了區塊鏈智能合約 面臨的幾項主要安全風險。首先是常見的網路攻擊手法，例如釣魚網站 (Phishing Website)，這類網站會偽裝成合法頁面，誘騙使用者輸入敏感資訊，在 ICO (首次代幣發行) 領域尤其普遍。此外，冒充知名人士（如 Vitalik 或 Elon Musk）進行詐騙也是常見的手段。
+從研究的視角來看，區塊鏈技術，特別是智能合約的普及，帶來了新的安全挑戰。資料顯示，僅在 2018 年上半年，全球區塊鏈行業因攻擊事件造成的損失就高達 11.5 億美元，這已經超過了 2016 年全年的總和，可見問題的嚴重性。對於初學者來說，了解這些風險是進入該領域研究的第一步。
 
-除了使用者層面的欺詐，程式碼層面的漏洞 更是智能合約 安全的重大威脅。資料溢出 (data overflow) 是一種嚴重的漏洞，可能導致攻擊者能夠憑空產生代幣。交易系統的 API 故障也可能被駭客利用，造成巨大損失。
+主要的安全風險包含：
 
-從數據上看，這些安全問題帶來的損失觸目驚心。僅在 2018 年上半年，區塊鏈行業因這些攻擊造成的損失就高達 11.5 億美元，甚至超過了 2016 年全年的總損失。研究報告也顯示，許多智能合約 存在問題，國立大學的研究指出大量智能合約都有問題。更令人擔憂的是，超過九成 的 ICO 最終都失敗了，這與潛在的安全或可靠性問題有很大關聯。這促使我們思考如何有效地評估和審計 (Audit) 智能合約 的安全性。
+*   **釣魚網站與詐騙**：這是針對使用者或專案方常見的攻擊手法，例如仿冒交易所（如幣安）或知名人士（如 Vitalik 或 Elon Musk）的社群媒體頁面或網站，誘騙使用者洩漏敏感資訊或轉移資金。
+*   **程式碼層面的漏洞 (Code Vulnerabilities)**：智能合約本身就是一段運行在區塊鏈上的程式碼（bytecode）。如同所有軟體，智能合約也可能存在程式錯誤或邏輯缺陷。資料中提到，一個嚴重的漏洞可能導致「資料溢出」，讓攻擊者得以憑空創造代幣。
+*   **交易系統 API 故障或被利用**：即使合約本身沒問題，底層的交易系統或其 API 也可能存在漏洞或故障，導致巨大損失。
+*   **大量智能合約存在問題**：有研究（例如新加坡國立大學的研究）指出，大量部署在以太坊主鏈上的智能合約存在安全問題。
+*   **ICO 專案的高失敗率**：超過九成的首次代幣發行 (ICO) 專案最終失敗或不可靠，部分原因可能與其安全問題相關。這也說明了在追求創新同時，應謹慎評估項目的可靠性與安全性。
 
-## 智能合約安全檢測方法：R2D2 的應用
+針對這些安全問題，學術界和業界都在積極探索審計（Audit）方法。審計就是對智能合約程式碼進行安全審查。傳統的方法可能包括靜態分析、符號執行或邏輯驗證。
 
-為了應對智能合約 的安全挑戰，研究人員提出了各種審計 (Audit) 方法。來源中提到了一些傳統方法，它們大都歸類於靜態分析、符號執行和邏輯驗證等。而我們團隊探索了一種利用深度學習 (CNN) 的創新方法，稱為 R2D2，最初可能應用於病毒檢測。
+資料中特別介紹了一種結合深度學習的方法，稱作 **R2D2 方法**，用於智能合約安全檢測。其核心思想是將智能合約的位元碼（bytecode，編譯後的機器碼形式）轉換成彩色圖片進行分析。具體做法是將位元碼中特定的數值對應到 RGB 顏色值（例如 606060 轉成 969696）。然後將整個位元碼掃描並生成一張彩色圖片。接著，利用訓練好的深度學習模型（基於 CNN）來識別圖片中的特徵模式，從而判斷合約是否存在已知的安全漏洞或問題。這種方法的優勢在於，被標記為有問題的合約通常確實存在問題，信任度較高，這與傳統防毒軟體識別的不確定性不同。
 
-對於新手來說，理解這個方法的關鍵在於「轉換」。我們的 R2D2 方法透過將智能合約 的位元碼 (bytecode) 轉換成彩色圖片來進行分析。具體來說，位元碼 中的特定數值會被轉換為 RGB 顏色值，例如 606060 轉換為 969696 (RGB)，405260 轉換為 648296 (RGB)。整個位元碼 序列被掃描並儲存成一張彩色圖片。
+為了協助使用者評估 ICO 和智能合約的安全性，存在如 **rating.io (ingpocket.net)** 這樣的平台。該平台提供多方面的評估功能：
 
-轉換成圖片後，我們就可以利用訓練好的深度學習模型，特別是卷積神經網路 (CNN)，來識別這些圖片中是否存在與安全漏洞 相關的特徵。這種方法相較於傳統的病毒檢測在信任度方面有優勢，因為被標記為有問題的智能合約 通常確實存在問題，較少出現誤報。需要注意的是，智能合約 可能同時存在多個漏洞 或問題，這使得這個問題成為一個多標籤 (Multilabel) 的分類問題，這在模型設計時需要考慮。我們監控以太坊 主鏈上新增的合約，提取其位元碼 進行掃描分析。
+*   **ICO 評估**：蒐集並分析 ICO 專案的多項公開指標，例如社群媒體（Facebook, Twitter, Telegram）熱度、GitHub 程式碼更新頻率、團隊資訊透明度等。這些資訊會被加權計算出一個綜合分數，作為可靠性的參考。
+*   **智能合約檢測**：平台會同步監控以太坊主鏈上新增的合約，並利用包括 R2D2 在內的方法對合約位元碼進行掃描和分析，提供安全評分和解析。儘管智能合約的安全性評分可能不是平台整體分數的主要組成部分。
 
-新手可能會想知道如何獲取智能合約 的位元碼。Etherscan 是一個常用的工具，可以瀏覽以太坊 上的交易和合約。然而，在 Etherscan 上查看原始碼 需要開發者主動提交，這意味著並非所有合約 都能公開看到原始碼，特別是一些有問題的合約。
+對於初入區塊鏈安全領域的研究者，了解這些基本概念、常見攻擊類型以及現有的檢測和評估工具，是開展進一步研究的基礎。
 
-## Ratingtoken.io 平台：評估 ICO 與智能合約可靠性
+## 深度學習的挑戰與新探索：以膠囊網路為例
 
-為了將研究成果應用於實際，並提高區塊鏈項目的透明度，我們開發了 Riten.io (或稱 ingpocket.net) 平台。這個平台提供多面向的評估功能，幫助使用者判斷 ICO 和智能合約 的可靠性與安全性。
+卷積神經網路（CNN）在圖像識別領域取得了巨大成功，甚至在 ImageNet 等比賽中超越了人類平均水平。然而，這項技術也面臨著一些瓶頸和挑戰，引發了學術界對其局限性的反思，甚至有人提出了「深度學習的冬天來了」的觀點。
 
-對於 ICO 項目，平台會收集並分析多項指標，包括其在社群媒體（Facebook、Twitter、Telegram）上的熱度、GitHub 上的程式碼更新頻率、團隊資訊的透明度 等。這些資訊會被納入計算一個綜合分數，分數越高通常代表項目越可靠。平台的統計數據顯示，高於四分的項目僅佔約 13%，這與其他機構發布的 ICO 失敗率（至少 80% 不可靠）是吻合的。我們還分析白皮書 的內容，甚至檢查是否存在抄襲嫌疑。平台目前也持續更新，增加更多社交媒體資訊分析的功能。
+CNN 主要的挑戰包括：
 
-對於智能合約 部分，Riten.io 平台利用我們提到的技術（如 R2D2 方法）對以太坊 主鏈上同步監控到的新增合約 進行位元碼 掃描和分析，並提供相應的安全評分和解析。雖然智能合約 的安全評分是評估的一部分，但目前在整個平台的綜合評分中可能不是主要的權重項目。
+*   **對訓練資料集的強烈依賴與泛化能力不足**：CNN 模型高度依賴於訓練資料的特性。如果遇到與訓練資料集分佈差異較大、或經過變形的圖像（如 CIFAR-10 的變形數據集），模型的準確度會大幅下降。這表明模型可能過度擬合了特定資料集的細節，而未能真正學到物體的本質特徵，缺乏足夠的泛化能力。
+*   **處理物體變形（如旋轉、縮放、位置變化）的效率問題**：傳統 CNN 主要利用池化層來實現對物體位置和角度變化的「等價性」（Invariance），即識別出物體是同一類別，而不關心其具體的姿態或位置。為了學習這種不變性，CNN 需要看到大量不同變形角度的訓練樣本。這需要龐大的資料集和計算資源。
 
-## 深度學習前沿：CNN 的挑戰與膠囊網路的探索
+Geoffrey Hinton，這位在深度學習領域舉足輕重的人物，也是 CNN 的批評者之一。他對 CNN 在處理空間層次關係和物體變形上的不足表示擔憂，並早在 2011 年就提出了「膠囊網路」（Capsule Network）的初步想法，包含 Autoencoder 的概念，旨在克服 CNN 的這些局限性。
 
-從區塊鏈安全領域轉向深度學習 的前沿，我們來探討一下圖像識別領域。卷積神經網路 (CNN) 在圖像識別上取得了巨大的成功，甚至在某些基準測試上超越了人類的準確度。然而，作為研究人員，我們必須看到它的局限性。
+**膠囊網路 (Capsule Networks)** 是一種新型的神經網路架構，其核心思想是用「膠囊」（Capsule）取代傳統神經網路中的標量神經元。一個膠囊的輸出不再是一個單一的數值，而是一個**向量（Activation Vectors）**。這個向量的「長度」代表了該向量所表示的實體（如物體或物體的一部分）存在的機率（通常被約束在 0 到 1 之間），而向量的「方向」則代表了實體的各種「屬性」（如位置、角度、大小、變形程度甚至顏色等）。
 
-對於新手來說，理解 CNN 的挑戰，可以幫助我們理解為何需要新的模型架構。CNN 高度依賴於訓練資料集，如果遇到與訓練資料差異較大的新資料（例如 CIFAR-10.1 對比 CIFAR-10 的實驗所示），模型的準確度可能會大幅下降。這表明現有的模型可能過度擬合了特定資料集特性，缺乏泛化能力。其次，傳統的 CNN 在處理圖像中的物體變形（如旋轉、縮放、位置變化）時，需要大量不同變形的訓練樣本來學習其不變性 (invariance)，這需要大量的資料和計算資源。正如演講者提到的，CNN 主要處理的是等價性 (invariance)，只知道某個物體是同一類別，而缺乏理解物體細微變化的能力。這也引發了學術界對深度學習是否已進入瓶頸期甚至「冬天」的討論。
+膠囊網路的關鍵組成部分和概念包括：
 
-這促使學界探索新的神經網路架構，其中膠囊網路 (Capsule Networks) 是一個重要的方向。膠囊網路 的發想始於 2011 年，並在 2017 年實現，2018 年又有所改進。它旨在克服傳統 CNN 在處理圖像特徵時的局限性，特別是針對空間層次關係和變換的捕捉。
+*   **Activation Vectors**：膠囊的輸出向量，其長度代表實體存在機率，方向代表屬性。
+*   **Affine Transform Function**：用於轉換低級別膠囊到高級別膠囊的輸出。
+*   **Squashing Function**：一個非線性函數，用於將膠囊輸出向量的長度「壓縮」到 0 到 1 的範圍，以便其可以被解釋為機率，同時保持向量的方向不變。這類似於傳統神經元的活化函數，但作用於向量。
+*   **Routing by Agreement (動態路由)**：這是膠囊網路的核心機制之一。它是一種迭代的路由演算法，用於確定低級別膠囊的輸出應該「發送」到哪些高級別膠囊。這個過程是基於「協議」或「一致性」的：如果低級別膠囊的輸出經過轉換後與某個高級別膠囊的「預測」或「姿態」向量對齊（agreement），那麼兩者之間的連接權重就會被加強，該低級別膠囊的輸出就更有可能被發送到該高級別膠囊。這使得網路能夠學到物體部分的空間層次關係，例如眼睛、鼻子、嘴巴如何組合成一張臉。這與 CNN 的最大池化（Max Pooling）不同，最大池化簡單地選擇最大值並丟棄其他資訊，而動態路由則通過協商過程保留了更多的空間資訊。
+*   **Decoder (解碼器)**：在膠囊網路的訓練過程中，通常會包含一個解碼器，用於從最終的膠囊表示重建出原始輸入圖像。這有助於驗證膠囊是否成功捕捉到了物體的關鍵特徵和屬性。這也體現了其 Autoencoder 的設計理念。
 
-## 膠囊網路 (Capsule Networks) 的核心概念與運作
+膠囊網路的目標是實現對物體變形的**等變性（Equivariance）**，而非 CNN 的等價性。這意味著當物體發生變形（如旋轉或平移）時，其膠囊表示的向量也會以一種可預測的方式隨之變動。這使得膠囊網路有望在看到少量不同變形的樣本後，就能理解該物體的各種變形姿態，從而可能只需要比 CNN 少得多的資料就能進行訓練。例如，理論上，膠囊網路可能只需看過少量種類的貓，就能識別全世界的貓，這比 CNN 需要大量不同毛色、姿態的貓圖像來學習不變性要高效。
 
-膠囊網路 (Capsule Networks) 的核心思想在於，它不像傳統神經元 只輸出一個標量值，而是輸出一個向量 (vector)。這個向量，也就是所謂的活化向量 (Activation Vectors)，包含了物體的許多資訊，例如方向性、大小、角度、位置、變形甚至顏色等。向量的長度 代表了該向量所表示的實體存在的機率，而向量的方向 代表了實體的屬性。
+然而，目前的膠囊網路仍面臨挑戰：
 
-對於新手來說，理解膠囊網路 的幾個關鍵組成部分至關重要：
+*   **計算量大與訓練速度慢**：特別是在處理大型圖像時，動態路由等機制需要迭代計算，導致訓練和推斷過程較慢。
+*   **在複雜圖像數據集上的效果仍需驗證和優化**：目前膠囊網路在 MNIST 這類簡單圖像數據集上表現優異，但在 ImageNet 等大型、複雜數據集上的成功案例和與 CNN 競爭的能力還有待更多研究。
 
-1.  **膠囊 (Capsule)：** 這是膠囊網路 的基本單元，它輸出一個向量，而不僅僅是傳統神經元的標量。可以想像成它封裝了對特定實體或特徵的識別資訊。
-2.  **Squashing 函數：** 由於膠囊向量的長度 代表機率，而機率值應介於 0 到 1 之間，Squashing 函數 的作用就是將膠囊輸出的向量長度 壓縮到這個範圍，同時保持向量的方向不變。這有助於網路的穩定訓練。
-3.  **動態路由 (Routing by Agreement)：** 這是膠囊網路 的一個核心算法。傳統 CNN 通過池化層 (Pooling) 丟失位置資訊，而膠囊網路 則使用動態路由 來確定低級別膠囊 的輸出應該『投票』或發送到哪些更高級別的膠囊。這個過程通過迭代 來突出最合適的組合，例如區分由相同部分（眼睛、鼻子）組成的臉部和分散排列的部分。這個算法概念上簡單，但計算量較大。
-4.  **Decoder (解碼器)：** 在膠囊網路 中，可以從學習到的膠囊向量 重建 (Reconstruction) 出原始圖像。這個過程通常用於訓練過程中，通過比較重建圖像與原始圖像的差異來計算重建損失 (Reconstruction Loss)，幫助網路學習捕捉圖像的關鍵特徵。透過調整膠囊向量 的參數，甚至可以看到重建圖像中對應特徵的變化（例如手寫數字筆劃的粗細、傾斜度等），這展示了膠囊確實捕捉到了物體的屬性。
-5.  **Loss Function (Margin Loss)：** 膠囊網路 使用特殊的損失函數，例如 Margin Loss，旨在讓正確類別的膠囊 輸出向量長度 趨近於 1，而錯誤類別的膠囊 輸出向量長度 趨近於 0。這鼓勵網路對正確類別產生高置信度，對錯誤類別產生低置信度。
+從研究生的角度來看，膠囊網路代表了後 CNN 時代，研究者探索新神經網路架構的一種方向。理解其動機、核心思想與工作原理，對於未來在機器學習領域進行創新和解決實際問題具有啟發意義。
 
-## 膠囊網路的優勢與挑戰
+## 其他相關技術活動與研究方向
 
-基於上述核心概念，膠囊網路 (Capsule Networks) 理論上展現出一些潛在的優勢。它有望使用比傳統 CNN 少得多的數據量來學習圖像特徵，例如只需看少量不同種類的貓就能識別全世界的貓。它能夠更好地捕捉物體的空間層次關係和變換，這是因為其向量表示和動態路由 機制能夠保留並傳遞物體的姿態等信息。此外，它對抗一些對 CNN 有效的對抗樣本 (adversarial examples) 可能更有效。
+除了區塊鏈安全和膠囊網路，資料中也提及了一些其他值得關注的技術活動和研究方向，這反映了當前技術領域的熱點：
 
-然而，作為一種相對較新的技術，膠囊網路 目前仍面臨顯著的挑戰。其中最主要的挑戰是計算量大、訓練速度慢，尤其對於大型圖像。動態路由 的迭代過程增加了計算開銷。目前的應用主要集中在 MNIST 等簡單圖像數據集，在複雜圖像 上的效果以及大規模圖形分析上的成功案例較少，可能需要進一步的優化。儘管理論美好，實際應用仍需更多驗證和改進。
+*   **技術交流與分享會**：學術與業界社群會定期舉辦分享會，討論最新的研究成果。例如，資料中提到了關於「膠囊網路」的分享會，以及未來預計舉辦的「推薦系統」分享會（九月）和邀請老師進行演講的計畫（十一月後）。還有一次關於「圖像增強」（Image Enhancement）論文的分享會（八月十七日），這項技術也已被應用到如 Photogen 的 APP 中。
+*   **駭客松 (Hackathon)**：結合實際應用與技術挑戰的活動。資料中提到 PicCollage 舉辦的駭客松（八月十八至十九日），其題目涵蓋了物聯網（IoT，使用 Google Voice Kit 進行語音應用開發）和深度學習（使用 GAN 進行美食圖像生成）。這類活動常與業界或政府合作，提供真實世界的資料（如台北市政府提供的交通 Log 資料）和技術支援（如動見未來 SoundAI 提供的中文語音識別服務及 Workshop），為參賽者提供實踐和創新的平台。對於新手而言，參與駭客松是快速學習和將理論應用於實踐的好機會。
+*   **R2D2 方法在資安領域的應用**：除了智能合約，資料中也提到 R2D2 方法過去曾應用於 ASIACrypt 和澳洲某會議上發表的內容，暗示其在更廣泛資安領域（如病毒檢測）的潛力。
 
-## 其他技術活動與研究分享
-
-除了區塊鏈安全和膠囊網路 的深度探討，來源中也提及了其他一些即將或正在進行的技術活動和研究，展現了社群的活躍與多元化。
-
-即將舉辦的活動包括 PiKOBand Hackathon，這個駭客松 預計於 8 月 18 日至 19 日在台大體育館舉行。比賽包含了與深度學習 相關的題目，例如利用 GAN (生成對抗網路) 進行美食圖像生成（圖像補全），並提供包含 20 種美食類別的資料庫。另一個題目則與物聯網 (IoT) 相關，將使用 Google Voice Kit 進行語音應用開發，並與台灣人工智慧實驗室 和動見未來公司 合作，利用他們開發的中文語音識別服務 提供資源和支持。此外，還有與台北市政府 合作提供的約 180G 的交通相關數據 可用於比賽。
-
-在研究分享方面，提到了將於 8 月 17 日舉行的一次分享會，將介紹一篇關於圖像增強 (Image Enhancement) 的論文，這項技術已經應用於 PiKOBand 的 PhotoGen 應用程式。九月份也預計會有一場關於推薦系統 的分享會。這些都顯示出學術研究與實際應用的緊密結合。
-
-總結來說，從區塊鏈智能合約的安全加固到人工智能前沿網路架構（如膠囊網路）的探索，再到各類技術活動的舉辦，這些領域都充滿了挑戰與機遇。作為研究人員，我們持續關注這些進展；對於新手而言，這也是一個充滿學習和實踐可能的廣闊天地。
+總體而言，這些活動和研究方向都指向了當前技術的前沿：智能合約安全、新型神經網路、語音識別、圖像生成、物聯網、推薦系統等。對於研究人員和初學者而言，了解這些領域的發展動態，積極參與社群交流和實踐活動，是拓展視野和提升能力的重要途徑。從提供的資料可以看出，台灣在這些領域也有活躍的研究和開發社群。
